# Stained-Glass-Odyssey-Idle

./: .gitignore  AGENTS.md  FINAL_STATUS_REPORT.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  README_TUTORIAL_SECTION.md  TESTING_GUIDE.md  TUTORIAL_FIX_SUMMARY.md  TUTORIAL_FIX_TEST_REPORT.md  TUTORIAL_IMPLEMENTATION_COMPLETE.md  TUTORIAL_PERSISTENCE_FIX.md  TUTORIAL_REFERENCE.md  TUTORIAL_TESTING.md  main.py  pyproject.toml  test_e2e_workflow.py  test_idle_stat_persistence.py  test_passives.py  test_passives_debug.py  test_shop_exp_interaction.py  test_tutorial.py
.codex/: INTEGRATION_SUMMARY.md
.codex/audit/: 1f13079e-damage-type-colors-audit.md  42cb5160-damage-type-fix-audit.md  587904c9-tutorial-system-review.md  83abd50c-damage-type-fix-audit.md  9d895735-qt-platform-plugin-failure.audit.md  AGENTS.md  a5edb163-damage-type-color-audit.md  cc4c797f-menu-lockup-investigation.audit.md  dad52b13-tutorial-system-code-audit.md  ec7aecfd-final-audit-damage-type-background-fix.audit.md  f9429e28-tutorial-overlay-analysis.audit.md  fe3f02cb-damage-type-fix-implementation-audit.md  midoriai-fix-review.md  midoriai-folder-audit.md  resource-tooltips-code-audit.md  resource-tooltips-review.md  skills-passives-code-audit.md  skills-passives-review.md  tutorial-fix-review.md  tutorial-persistence-fix-review.md  ui-issues-found.md
.feedback/: AGENTS.md
.github/: copilot-instructions.md
endless_idler/: __init__.py  __main__.py  app.py  progression.py  run_rules.py  save.py  save_codec.py  settings.py
tests/: __init__.py  test_passive_integration.py
(+251 files in other folders)
