[project]
name = "Stained-Glass-Odyssey-Idle"
version = "0.1.0"
description = "A game based on our Stained Glass games using chars from the shared world"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8.0",
]

[project.scripts]
endless-idler = "endless_idler.app:main"

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
endless_idler = [
    "assets/**/*",
]
